--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.css
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.css
@@ -8,3 +8,9 @@ p {
     font-size: 14px;
     line-height: 1.5;
 }
+
+.mat-expansion-panel {
+    box-shadow: none !important;
+    border: 1px solid #eaeaea;
+    border-top-color: #fcfcfc;
+}
